--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </nav>
 <div>
     Main Content Area
+    <p>wellcame<p>
+    <h1>waddee</h1>    
+    </p>lol</p>
+    <h2>susu</h2>
 </div>
 
 <footer>
