--- a/index.html
+++ b/index.html
@@ -12,18 +12,30 @@
  </header>    
 <nav>
     Navigation area
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">contact.html</a></li>
+        <li><a href="#">chat</a></li>
+        <li><a href="#">google</a></li>
+        <li><a href="#">com</a></li>
+        <img src="https://play-lh.googleusercontent.com/qPz2598bkAbZKDV5tm6-nt0xJdTeSp9rcw-msxEZAYUrvdEtHM82lknNWYsNY2FB_Q" alt="รูป">
+    </ul>
 </nav>
 <div>
     Main Content Area
     <p>wellcame<p>
+        
     <h1>waddee</h1>    
     </p>lol</p>
     <h2>susu</h2>
-</div>
+<div>
 
 <footer>
     Footer Area
 </footer>
 </div> 
+
+
+
 </body>
 </html>
