--- a/index.html
+++ b/index.html
@@ -1,41 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BECKY SHOP</title>
+    <title>Becky Shop</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Roboto', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9caf3;
+            color: #676666;
+            text-align: center;
+            font-size: 1.5em;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #eee;
+            overflow: hidden;
+        }
+
+        nav ul li {
+            display: inline-block;
+            margin: 0 10px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #333;
+        }
+
+        nav img {
+            max-width: 200px;
+            margin-top: 10px;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        footer {
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #ddd;
+            font-size: 0.9em;
+        }
+    </style>
 </head>
+
 <body>
- <div>
- <header>
-    <h1>Becky</h1>
- </header>    
-<nav>
-    Navigation area
-    <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">contact.html</a></li>
-        <li><a href="#">chat</a></li>
-        <li><a href="#">google</a></li>
-        <li><a href="#">com</a></li>
-        <img src="https://play-lh.googleusercontent.com/qPz2598bkAbZKDV5tm6-nt0xJdTeSp9rcw-msxEZAYUrvdEtHM82lknNWYsNY2FB_Q" alt="รูป">
-    </ul>
-</nav>
-<div>
-    Main Content Area
-    <p>wellcame<p>
-        
-    <h1>waddee</h1>    
-    </p>lol</p>
-    <h2>susu</h2>
-<div>
 
-<footer>
-    Footer Area
-</footer>
-</div> 
+    <header>
+        <h1>Becky Shop</h1>
+    </header>
 
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">Chat</a></li>
+            <li><a href="https://www.google.com" target="_blank">Google</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+        <img src="https://play-lh.googleusercontent.com/qPz2598bkAbZKDV5tm6-nt0xJdTeSp9rcw-msxEZAYUrvdEtHM82lknNWYsNY2FB_Q"
+            alt="รูป">
+    </nav>
 
+    <main>
+        <h2>ยินดีต้อนรับสู่ร้าน Becky Shop</h2>
+        <p>สวัสดีครับลูกค้าที่น่ารักทุกท่าน!</p>
+        <p>ขอบคุณที่แวะเข้ามาเยี่ยมชมร้านของเรา :)</p>
+        <h3>มีอะไรให้เราช่วยไหม?</h3>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Becky Shop. All MAEJO CNX.</p>
+    </footer>
 
 </body>
+
 </html>
